# ARIAC-Competition-repo

./: README.md
Planning/: CMakeLists.txt  package.xml
Planning/config/: qual1a_conf.yaml
Planning/src/: qual1-domain.pddl  qual1-problem.pddl  qual1.cpp
arm_controller/: CMakeLists.txt  package.xml
arm_controller/config/: workcell_conf.yaml
arm_controller/include/: armController.h
arm_controller/launch/: arm_controller.launch
arm_controller/msg/: manager.msg
arm_controller/src/: armController.cpp  arm_node.cpp
competition/: CMakeLists.txt  package.xml
competition/config/: team_config.yaml
competition/include/: manager.h
competition/src/: main.cpp  manager.cpp
pnp_qualifier/: CMakeLists.txt  package.xml
pnp_qualifier/config/: qual1a.yaml  workcell_conf.yaml
pnp_qualifier/launch/: pnp.launch
pnp_qualifier/src/: ariac_example_node.cpp  armController.cpp  pnp_node.cpp  qual1.cpp  test_node.cpp
qualifier_2/: CMakeLists.txt  package.xml
qualifier_2/config/: qual2a.yaml
qualifier_2/launch/: qual2.launch
qualifier_2/src/: qual2.cpp
qualifier_2b/: CMakeLists.txt  package.xml
qualifier_2b/config/: qual2b_conf.yaml
qualifier_2b/include/: armController.h
qualifier_2b/launch/: qual2.launch
qualifier_2b/src/: qual2_b.cpp
turtlebot_demo/: CMakeLists.txt  package.xml
turtlebot_demo/src/: .testpub.cpp.swp  random_vel.cpp
ur10_trials/: CMakeLists.txt  package.xml
ur10_trials/config/: test.yaml
ur10_trials/include/: armController.h
ur10_trials/launch/: test.launch
ur10_trials/src/: armController.cpp  testScript.cpp
