<?xml version="1.0"?>
<package format="2">
  <name>arm_controller</name>
  <version>0.1.0</version>
  <description>Package for the ARIAC qualifier 2</description>
  <maintainer email="ymanian@umd.edu">Yash Manian</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
