<?xml version="1.0"?>
<package format="2">
  <name>qualifier2b</name>
  <version>0.1.0</version>
  <description>Package for the ARIAC qualifier 2</description>
  <maintainer email="vaibhav24.vb@gmail.com">Vaibhav Bhilare</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
